# rossi0128

_test/: 1  1.c
cmake/: CMakeLists.txt
cmake/include/: Command.h
cmake/source/: client.c  command.c  service.c
coredump/: core._home_lengt_gdb_learn_crash.0.74adb674-b23c-46d5-ae1d-542d0523b847.2388.153729  crash  crash.c  get_coredump.sh
fork/: fork.c  mk.sh
grpc/helloworld/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
msgq/: client.c  service.c
pipe/: pipe.c
shmems/: makefile
shmems/include/: Command.h
shmems/source/: command.c
tipc/: CMakeLists.txt
tipc/include/: common_tipc.h
tipc/source/: client_tipc.c  server_tipc.c
